# prediction-market-whale-detector

./: CLAUDE.md  README.md  config.example.toml  config.toml  pyproject.toml
docs/research/: 01-prediction-markets-overview.md  02-polymarket-architecture.md  03-whale-detection-metrics.md  04-case-studies.md  05-monitoring-and-mitigation.md
src/whale_detector/: __init__.py  __main__.py  cli.py  config.py  coordination.py  db.py  models.py  monitor.py  paper_trading.py
src/whale_detector/alerting/: __init__.py  base.py  discord.py  telegram.py  terminal.py
src/whale_detector/api/: client.py  data_api.py  gamma_api.py
src/whale_detector/scoring/: __init__.py  account_age.py  base.py  coordination.py  probability.py  timing.py  trade_size.py  win_rate.py
tests/: conftest.py  test_alerting.py  test_coordination_detector.py  test_db.py  test_historical.py  test_models.py  test_monitor.py  test_paper_trading.py
tests/test_api/: test_data_api.py
tests/test_scoring/: test_account_age.py  test_coordination.py  test_probability.py  test_statistical_accuracy.py  test_timing.py  test_trade_size.py  test_win_rate.py
web/backend/: deps.py  main.py
web/backend/routes/: alerts.py  config.py  coordination.py  markets.py  paper.py  stats.py  trades.py  wallets.py
web/frontend/: package-lock.json
web/frontend/src/app/: globals.css  layout.tsx  page.tsx
web/frontend/src/components/: alert-card.tsx  coordination-card.tsx  score-badge.tsx  sidebar.tsx  stat-card.tsx  trade-table.tsx  volume-chart.tsx
web/frontend/src/hooks/: use-polling.ts
(+10 files in other folders)
