[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "whale-detector"
version = "0.1.0"
description = "Real-time whale activity detector for Polymarket prediction markets"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "rich>=13.0",
    "click>=8.0",
    "aiosqlite>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "ruff>=0.4",
    "mypy>=1.10",
]
clustering = [
    "scipy>=1.13",
    "numpy>=1.26",
]
webhooks = [
    "aiohttp>=3.9",
]
web = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]

[project.scripts]
whale-detector = "whale_detector.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/whale_detector"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"web/**" = ["B008"]

[tool.mypy]
python_version = "3.11"
strict = true
